# vksplat

./: .gitignore  CITATION.bib  README.md  compile_shaders.py  index.html
vksplat/: CMakeLists.txt  setup.py
vksplat/shader/: checksum.json
vksplat/slang/: cumsum.slang  tile_shader.slang
vksplat/src/: buffer.cpp  buffer.h  config.h  gs_pipeline.cpp  gs_pipeline.h  gs_renderer.cpp  gs_renderer.h  gs_trainer.cpp  gs_trainer.h  python_bindings.cpp
